# TwoDFractals

./: .gitignore  CMakeLists.txt  README.md
src/: grid.h  logisticMap.h  main.cpp  range.h  ui.h
